<resources>
    <string name="app_name">Warehouse</string>

    <!--ToolbarText-->
    <string name="tt_Warehouses">Warehouses</string>
    <string name="accountSettings">Account Settings</string>
    <string name="basket">Basket</string>


    <!--headlines-->
    <string name="h_create_warehouse">Create Warehouse</string>
    <string name="h_Buy">Buy</string>
    <string name="h_Sell">Sell</string>
    <string name="h_addProducts">Add Products to Order</string>

    <!--TextView-->
    <string name="name_colon">Name:</string>
    <string name="description_colon">Description:</string>
    <string name="capacity_colon">Capacity:</string>
    <string name="quantity_colon">Quantity:</string>

    <string name="capacity">Capacity</string>
    <string name="storedProducts">Stored Products</string>

    <string name="amount">Amount</string>
    <string name="products">Products</string>

    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>

    <!--TextFields-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>

    <!--Buttons-->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="notRegistered">Not registered yet?</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="statistics">Statistics</string>

    <!--Image View-->
    <string name="settings">Settings</string>

    <!--Menu-->
    <string name="delete">Delete</string>
    <string name="editUserdata">Edit Userdata</string>
    <string name="deleteUser">Delete User</string>
    <string name="tab_capacityCourse">Capacity</string>
    <string name="tab_productPortion">Products quota</string>
    <string name="tab_importExportCourse">Import/Export</string>
    <string name="tab_products">Products</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_warehouse_statistics">WarehouseStatisticsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
</resources>
