<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.warehouse.EditUserData">


    <TextView
        android:id="@+id/aeud_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/aeud_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/aeud_tv_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aeud_tv_username"
        android:layout_alignStart="@+id/aeud_tv_username"
        android:layout_marginStart="-11dp"
        android:layout_marginTop="46dp"
        android:text="@string/oldPassword" />

    <EditText
        android:id="@+id/aeud_et_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aeud_et_oldPassword"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/aeud_btn_cancel"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/aeud_tv_confirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aeud_tv_newPassword"
        android:layout_alignStart="@+id/aeud_tv_username"
        android:layout_marginStart="-9dp"
        android:layout_marginTop="34dp"
        android:text="@string/newPassword" />


    <EditText
        android:id="@+id/aeud_et_confirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aeud_et_newPassword"
        android:layout_alignEnd="@+id/aeud_et_newPassword"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/aeud_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="54dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/aeud_btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/aeud_btn_cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="74dp"
        android:text="@string/change" />

    <TextView
        android:id="@+id/aeud_tv_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aeud_tv_confirmNewPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:text="@string/confirmPassword" />

    <EditText
        android:id="@+id/aeud_et_oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aeud_et_username"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/aeud_btn_cancel"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>